[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
python = ">=3.8.2,<3.10"
scikit-learn = "^1.2.2"
wheel = "^0.40.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "<8.15"
black = "^23.3.0"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
